--- a/composer.json
+++ b/composer.json
@@ -9,10 +9,10 @@
         "laravel/framework": "5.2.*",
         "maatwebsite/excel": "^2.1",
         "alfred-nutile-inc/env-deployer": "dev-master",
-        "laralib/l5scaffold": "dev-master"
+        "laralib/l5scaffold": "dev-master",
+        "fzaninotto/faker": "~1.4"
     },
     "require-dev": {
-        "fzaninotto/faker": "~1.4",
         "mockery/mockery": "0.9.*",
         "phpunit/phpunit": "~4.0",
         "symfony/css-selector": "2.8.*|3.0.*",
